[tool.poetry]
name = "mcpack"
version = "0.3.1"
description = "A python library for programmatically creating and editing Minecraft data packs"

license = "MIT"

authors = ["Valentin Berlier <berlier.v@gmail.com>"]

readme = "README.md"

repository = "https://github.com/vberlier/mcpack"
homepage = "https://github.com/vberlier/mcpack"

keywords = [
  "minecraft",
  "mcfunction",
  "advancements",
  "loot-tables",
  "recipes",
  "structures",
  "datapack",
]

[tool.poetry.dependencies]
python = "^3.7"
nbtlib = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.10"
tox = "^3.5"
